log/build_2025-01-20_19-06-17/jst_gmt/stdout_stderr.log
running egg_info
writing ../../build/jst_gmt/jst_gmt.egg-info/PKG-INFO
writing dependency_links to ../../build/jst_gmt/jst_gmt.egg-info/dependency_links.txt
writing entry points to ../../build/jst_gmt/jst_gmt.egg-info/entry_points.txt
writing requirements to ../../build/jst_gmt/jst_gmt.egg-info/requires.txt
writing top-level names to ../../build/jst_gmt/jst_gmt.egg-info/top_level.txt
reading manifest file '../../build/jst_gmt/jst_gmt.egg-info/SOURCES.txt'
writing manifest file '../../build/jst_gmt/jst_gmt.egg-info/SOURCES.txt'
running build
running build_py
copying jst_gmt/talker.py -> /home/yuki/ros2_ws/build/jst_gmt/build/lib/jst_gmt
running install
running install_lib
copying /home/yuki/ros2_ws/build/jst_gmt/build/lib/jst_gmt/talker.py -> /home/yuki/ros2_ws/install/jst_gmt/lib/python3.8/site-packages/jst_gmt
byte-compiling /home/yuki/ros2_ws/install/jst_gmt/lib/python3.8/site-packages/jst_gmt/talker.py to talker.cpython-38.pyc
  File "/home/yuki/ros2_ws/install/jst_gmt/lib/python3.8/site-packages/jst_gmt/talker.py", line 1
    import rclpy
                      ^
SyntaxError: invalid character in identifier

running install_data
running install_egg_info
removing '/home/yuki/ros2_ws/install/jst_gmt/lib/python3.8/site-packages/jst_gmt-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/jst_gmt/jst_gmt.egg-info to /home/yuki/ros2_ws/install/jst_gmt/lib/python3.8/site-packages/jst_gmt-0.0.0-py3.8.egg-info
running install_scripts
Installing talker script to /home/yuki/ros2_ws/install/jst_gmt/lib/jst_gmt
writing list of installed files to '/home/yuki/ros2_ws/build/jst_gmt/install.log'
